--- a/PixelShadow/index.html
+++ b/PixelShadow/index.html
@@ -19,7 +19,7 @@
             display: block;
         }
     </style>
-    <script src="js/three.min.js"></script>
+    <script src="js/three.js"></script>
     <script src="js/jquery.min.js"></script>
 
     <script src="js/shadow.js"></script>
